infrastructure/velero/velero-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velero-ui
  namespace: velero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: velero-ui
  template:
    metadata:
      labels:
        app: velero-ui
    spec:
      serviceAccountName: velero-server 
      containers:
        - name: velero-ui
          image: otwld/velero-ui:latest # <--- ΔΙΟΡΘΩΘΗΚΕ: Docker Hub αντί για GHCR
          imagePullPolicy: Always
          ports:
            - containerPort: 3000       # <--- ΔΙΟΡΘΩΘΗΚΕ: Η σωστή πόρτα της εφαρμογής
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
