infrastructure/velero/velero-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: velero-ui-service
  namespace: velero
spec:
  selector:
    app: velero-ui
  ports:
    - protocol: TCP
      port: 8080         # Αυτό που ζητάει το Ingress
      targetPort: 3000   # Αυτό που ζητάει το νέο Pod
  type: ClusterIP
